some bugfix & cleanup in recipe.css - try to close gap between two input-tags, but not possible

--- a/style/recipe.css
+++ b/style/recipe.css
@@ -1,7 +1,8 @@
 
 .recipe__main > h1{
     margin-top: 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
     font-weight: 900;
 }
 
@@ -77,12 +78,8 @@
 
 
 .recipe__input-ingredients {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
     margin-bottom: 0.75rem;
     margin-top: 0.75rem;
-    gap: 1rem;
 }
 
 
@@ -97,7 +94,7 @@
     padding: 0.25rem;
     border: 1px solid #efefef;
     outline: none;
-    text-align: center;
+    text-align: left;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
@@ -141,7 +138,7 @@
 
 
 .recipe__table__amount {
-    padding: 0.5rem 1rem;
+    padding: 0.75rem 1rem;
     width: 6rem;
 }
 
@@ -152,6 +149,7 @@
 
 
 .recipe__title > h2 {
+    font-size: 1.25rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
 }
@@ -160,7 +158,8 @@
 .recipe__preparation {
     margin-top: 2rem;
     margin-bottom: 2rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
+    font-size: 1rem;
 }
 
 
@@ -171,6 +170,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-size: 1.25rem;
 }
 
 
